Fix overflow-x in mobile devices

--- a/src/components/ui/header-shape/HeaderShape.module.css
+++ b/src/components/ui/header-shape/HeaderShape.module.css
@@ -9,8 +9,8 @@
   bottom: 0;
   right: 0;
   left: 0;
-  width: 120%;
-  height: 100%;
+  width: 100%;
+  height: 110%;
   background: var(--darker);
   background: linear-gradient(
     0deg,
@@ -24,6 +24,8 @@
 
 @media (width >= 960px) {
   .skewed {
+    width: 120%;
+    height: 100%;
     rotate: -4deg;
     translate: -20px;
     border-bottom-left-radius: 60px;
